Update _config.yml -- LinkedIn

--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "Zhiyou Xiao"
+  linkedin         : "zhiyou1224@gmail.com"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
