Update _config.yml -- side finished

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Master Student in School of Software & Microelectronics, Peking University"
   location         : "Beijing, China"
-  employer         : "Red Brick University"
+  employer         : "Peking University"
   uri              : # URL
   email            : "xiaozhiyou@stu.pku.edu.cn" 
 
